# ihsforecaster

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: app.py  backend.py  baseline.py  contrato.py  frontend.py  ml_params.yaml
src/pages/: unpivot_baseline_ajustado.py
