[project]
name = "ihsforecaster"
version = "0.1.0"
description = ""
authors = [
    {name = "Ismael Santana"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "workalendar (>=17.0.0,<18.0.0)",
    "ruff (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
