[project]
name = "ihsforecaster"
version = "0.1.0"
description = ""
authors = [
    {name = "Ismael",email = "ismael.santana@ifood.com.br"}
]
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "mlforecast (>=1.0.2,<2.0.0)",
    "ruff (>=0.9.9,<0.10.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "workalendar (>=17.0.0,<18.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "numba (>=0.61.0,<0.62.0)",
    "window-ops (>=0.0.15,<0.0.16)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
